2004-07-25  Lars Hansen  <larsh@math.ku.dk>

	* wdired.el (wdired-finish-edit): Require dired-aux before locally
	binding dired-backup-overwrite.

2004-07-25  John Paul Wallington  <jpw@gnu.org>

	* subr.el (butlast, event-modifiers, event-basic-type): Doc fixes.

2004-07-24  Luc Teirlinck  <teirllm@auburn.edu>

	* term/tty-colors.el (tty-color-approximate): Doc fix.

	* select.el (x-get-selection, x-set-selection): Doc fixes.

	* frame.el (make-frame): Doc fix.

2004-07-24  Richard M. Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-mime-charset-pattern):
	Don't include semicolon in the charset value.

	* replace.el (occur-next-error): Call set-window-point.
	(occur-engine): Handle negative NLINES.

2004-07-23  Luc Teirlinck  <teirllm@auburn.edu>

	* frame.el (modify-all-frames-parameters): Minor doc fix.
	(set-frame-configuration): Doc fix.

2004-07-23  Matt Hodges  <matt@stchem.bham.ac.uk>  (tiny change)

	* simple.el (completion-setup-function): Compute the common parts
	and the first difference place correctly when
	partial-completion-mode is on.

2004-07-22  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Doc fix.  Improve the DSC compliance of the generated
	PostScript.  Suggested by Michael Piotrowski <mxp@dynalabs.de>.
	(ps-print-version): New version 6.6.5.
	(ps-printing-region): Doc fix.
	(ps-generate-string-list): Comment fix.
	(ps-message-log-max, ps-begin-file): Code fix.

2004-07-22  Kim F. Storm  <storm@cua.dk>

	* progmodes/make-mode.el: Fix comments.

2004-07-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Doc fix.

2004-07-20  Luc Teirlinck  <teirllm@auburn.edu>

	* frame.el (modify-all-frames-parameters): Minor doc fix.

2004-07-20  Richard M. Stallman  <rms@gnu.org>

	* textmodes/fill.el (fill-comment-paragraph): Handle indent-tabs-mode.
	(fill-delete-newlines): Call sentence-end as function.
	(fill-nobreak-p, canonically-space-region): Likewise.
	(fill-nobreak-p): If this break point is at the end of the line,